tests/suite/snapshots/suite__check__tests__check__bad_bin_op_1.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_bin_op_1.xi:2:14]
   │
 2 │     b:bool = true < false
   ·              ──┬─  
   ·                ╰─── Expected int but found bool
───╯

